Functionality added: Api, retrival and pdf loader(OCR)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-faiss-cpu
+fastapi
+uvicorn
 sentence-transformers
-python-dotenv
+faiss-cpu
 nltk
+python-dotenv
 groq
+pdfplumber
+pytesseract
+Pillow
